#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(sai-tools, 0.1, marianp@mellanox.com)
AC_CONFIG_SRCDIR([])
AM_INIT_AUTOMAKE

AC_LANG([C++])
AC_PROG_CXX

# Checks for programs.

# Checks for libraries.
AC_CHECK_LIB([sai], [sai_api_query])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT(Makefile)
